# Wallet_live

./: .env  Cargo.toml  compose.yml
migrations/: 20260626190326_create_assets.up.sql
src/: app.rs  main.rs  models.rs  repository.rs
src/Error/: app_error.rs  mod.rs
src/auth/: admin.rs
src/routes/: api.rs
