[package]
name = "wallet_live"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
color-eyre = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }

thiserror = "2"
dotenvy = "0.15"

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
